--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,12 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
 
 development:
   <<: *default
@@ -22,4 +25,6 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: likeimage_production
+  username: likeimage
+  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
